# KommitQtCreatorPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  KommitQtCreatorPlugin.json.in  README.md  changedfilespane.cpp  changedfilespane.h  gitdata.cpp  gitdata.h  kommitqtcreatorplugin.cpp  kommitqtcreatorplugin.h  kommitqtcreatorplugin_global.h  kommitqtcreatorpluginconstants.h  kommitqtcreatorplugintr.h  kommitsidebar.cpp  kommitsidebar.h  kommitsidebar.ui  kommitsidebarfactory.cpp  kommitsidebarfactory.h
.github/workflows/: build_cmake.yml
